# fastapi-authentication

./: README.md  main.py  pyproject.toml  requirements.txt
src/: auth.py  main.py
