[project]
name = "fastapi-authentication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "types-passlib>=1.7.7.20250602",
]
